AC_PREREQ(2.53)
AC_INIT(engine, 1.0.0, swoprogrammers@soe.sony.com)
AC_CONFIG_AUX_DIR(config)
AC_CANONICAL_BUILD
AC_CANONICAL_HOST
AC_CANONICAL_TARGET


AC_ARG_ENABLE([debug], AC_HELP_STRING([--enable-debug\[=yes\|no\] ], [defines _DEBUG and enables debugging features]), AC_DEFINE(_DEBUG) CXXFLAGS="$CXXFLAGS -g", [])

# todo -  when using gcc-3, pick more optimizations for use
AC_ARG_ENABLE([optimized], AC_HELP_STRING([--enable-optimized\[=yes\|no\] ], [enables optimizations]), CXXFLAGS="$CXXFLAGS -O2", [])

case $target in
*-linux-*)
        platform=[linux];
	AC_DEFINE(LINUX)
	AC_DEFINE(_REENTRANT)
	AC_DEFINE(_XOPEN_SOURCE, 500)
	AC_DEFINE(_GNU_SOURCE)
	AC_DEFINE(linux)
	AC_DEFINE(_GNU_SOURCE)
	AC_DEFINE(_USING_STL)
	AC_DEFINE(__STL_NO_BAD_ALLOC)
esac
AC_SUBST(platform)

AM_INIT_AUTOMAKE

AC_PROG_LIBTOOL
AC_PROG_CXX
AC_PROG_CC


# setup common CXXFLAGS if none were specified in the environment
#if ! test $CXXFLAGS; then
#   CXXFLAGS = -g -Wall -Wno-unused -Werror -Wno-ctor-dtor-privacy -Wno-unknown-pragmas -Wchar-subscripts -Wformat -Wimplicit -Wmultichar -Wparentheses -Wreturn-type -Wswitch -Weffc++
#fi

AC_DEFUN([REQUIRE_PACKAGE], [if ! test $$3; then AC_ARG_WITH([$1], AC_HELP_STRING([--with-$1=path/to/$1], [where to find $1]), AC_SUBST($3, $withval), AC_SUBST($3, $2)) AC_CHECK_FILE($4, [], AC_MSG_ERROR([$1 is required but was not found in $$3])) fi])

REQUIRE_PACKAGE(engine, [`pwd`], engine_dir, [$engine_dir/shared/library/sharedFoundation/include/public/sharedFoundation/FirstSharedFoundation.h]) AC_SUBST(engine_dir)
REQUIRE_PACKAGE(stlport, [`pwd`/../external/3rd/library/stlport453], stlport_dir, [$stlport_dir/stlport/algorithm]) AC_SUBST(stlport_dir)
REQUIRE_PACKAGE(archive, [`pwd`/../external/ours/library/archive], archive_dir, [$archive_dir/include/Archive/Archive.h]) AC_SUBST(archive_dir)
REQUIRE_PACKAGE(localization, [`pwd`/../external/ours/library/localization], localization_dir, [$localization_dir/include/FirstLocalization.h]) AC_SUBST(localization_dir)
REQUIRE_PACKAGE(crypto, [`pwd`/../external/ours/library/crypto], crypto_dir, [$crypto_dir/include/FirstCrypto.h]) AC_SUBST(crypto_dir)
REQUIRE_PACKAGE(localizationArchive, [`pwd`/../external/ours/library/localizationArchive], localizationArchive_dir, [$localizationArchive_dir/include/public/localizationArchive/FirstLocalizationArchive.h]) AC_SUBST(localizationArchive_dir)
REQUIRE_PACKAGE(fileInterface, [`pwd`/../external/ours/library/fileInterface], fileInterface_dir, [$fileInterface_dir/include/public/fileInterface/FirstFileInterface.h]) AC_SUBST(fileInterface_dir)
REQUIRE_PACKAGE(unicode, [`pwd`/../external/ours/library/unicode], unicode_dir, [$unicode_dir/include/Unicode.h]) AC_SUBST(unicode_dir)
REQUIRE_PACKAGE(unicodeArchive, [`pwd`/../external/ours/library/unicodeArchive], unicodeArchive_dir, [$unicodeArchive_dir/include/public/unicodeArchive/FirstUnicodeArchive.h]) AC_SUBST(unicodeArchive_dir)
REQUIRE_PACKAGE(udplibrary, [`pwd`/../external/3rd/library/udplibrary], udplibrary_dir, [$udplibrary_dir/UdpLibrary.hpp]) AC_SUBST(udplibrary_dir)
REQUIRE_PACKAGE(oracle, [`pwd`/../external/3rd/library/oracle], oracle_dir, [$oracle_dir/include/oci.h]) AC_SUBST(oracle_dir)
REQUIRE_PACKAGE(libxml, [`pwd`/../external/3rd/library/libxml], libxml_dir, [$libxml_dir/libxml.h]) AC_SUBST(libxml_dir)
AC_MSG_WARN([engine has a forward dependency on game])
REQUIRE_PACKAGE(game, [`pwd`/../game], game_dir, [$game_dir/shared/library/swgSharedUtility/include/public/swgSharedUtility/FirstSwgSharedUtility.h]) AC_SUBST(game_dir)
REQUIRE_PACKAGE(singleton, [`pwd`/../external/ours/library/singleton], singleton_dir, [$singleton_dir/include/Singleton/Singleton.h]) AC_SUBST(singleton_dir)
REQUIRE_PACKAGE(boost, [`pwd`/../external/3rd/library/boost], boost_dir, [$boost_dir/boost/smart_ptr.hpp]) AC_SUBST(boost_dir)
REQUIRE_PACKAGE(pcre, [`pwd`/../external/3rd/library/pcre/4.1/$platform], pcre_dir, [$pcre_dir/include/pcre/pcre.h]) AC_SUBST(pcre_dir)
REQUIRE_PACKAGE(perforce, [`pwd`/../external/3rd/library/perforce], perforce_dir, [$perforce_dir/include/clientapi.h]) AC_SUBST(perforce_dir)
REQUIRE_PACKAGE(soePlatform, [`pwd`/../external/3rd/library/soePlatform], soePlatform_dir, [$soePlatform_dir/Base/Base.h]) AC_SUBST(soePlatform_dir)
REQUIRE_PACKAGE(platform, [`pwd`/../external/3rd/library/platform], platform_dir, [$platform_dir/MonAPI2/MonitorAPI.h]) AC_SUBST(platform_dir)

# AC_DEFUN([ENGINE_AUTOMAKE], [AC_MSG_NOTICE([creating $1.in]) ; automake $1])
# ENGINE_AUTOMAKE($engine_dir/shared/library/sharedDebug/src/$platform/Makefile)
# ENGINE_AUTOMAKE($engine_dir/shared/library/sharedFile/src/$platform/Makefile)
# ENGINE_AUTOMAKE($engine_dir/shared/library/sharedFoundation/src/$platform/Makefile)
# ENGINE_AUTOMAKE($engine_dir/shared/library/sharedRegex/src/$platform/Makefile)
# ENGINE_AUTOMAKE($engine_dir/shared/library/sharedLog/src/$platform/Makefile)
# ENGINE_AUTOMAKE($engine_dir/shared/library/sharedMemoryManager/src/$platform/Makefile)
# ENGINE_AUTOMAKE($engine_dir/shared/library/sharedNetwork/src/$platform/Makefile)
# ENGINE_AUTOMAKE($engine_dir/shared/library/sharedSynchronization/src/$platform/Makefile)
# ENGINE_AUTOMAKE($engine_dir/shared/library/sharedThread/src/$platform/Makefile)
# ENGINE_AUTOMAKE($engine_dir/shared/application/TemplateCompiler/src/$platform/Makefile)
# ENGINE_AUTOMAKE($engine_dir/shared/application/ArmorExporterTool/src/$platform/Makefile)
# ENGINE_AUTOMAKE($engine_dir/shared/application/DataTableTool/src/$platform/Makefile)
# ENGINE_AUTOMAKE($engine_dir/shared/application/TemplateDefinitionCompiler/src/$platform/Makefile)
# ENGINE_AUTOMAKE($engine_dir/shared/application/WeaponExporterTool/src/$platform/Makefile)
# ENGINE_AUTOMAKE($engine_dir/shared/application/CoreWeaponExporterTool/src/$platform/Makefile)
# ENGINE_AUTOMAKE($engine_dir/server/application/CentralServer/src/$platform/Makefile)
# ENGINE_AUTOMAKE($engine_dir/server/application/ChatServer/src/$platform/Makefile)
# ENGINE_AUTOMAKE($engine_dir/server/application/ConnectionServer/src/$platform/Makefile)
# ENGINE_AUTOMAKE($engine_dir/server/application/CustomerServiceServer/src/$platform/Makefile)
# ENGINE_AUTOMAKE($engine_dir/server/application/LoginPing/src/$platform/Makefile)
# ENGINE_AUTOMAKE($engine_dir/server/application/LoginServer/src/$platform/Makefile)
# ENGINE_AUTOMAKE($engine_dir/server/application/LogServer/src/$platform/Makefile)
# ENGINE_AUTOMAKE($engine_dir/server/application/MetricsServer/src/$platform/Makefile)
# ENGINE_AUTOMAKE($engine_dir/server/application/PlanetServer/src/$platform/Makefile)
# ENGINE_AUTOMAKE($engine_dir/server/application/TaskManager/src/$platform/Makefile)
# ENGINE_AUTOMAKE($engine_dir/server/application/TransferServer/src/$platform/Makefile)
# ENGINE_AUTOMAKE($engine_dir/server/library/serverUtility/src/$platform/Makefile)


AC_OUTPUT(Makefile \
	  shared/Makefile \
	  shared/library/Makefile \
	  shared/library/sharedCollision/Makefile \
	  shared/library/sharedCollision/src/Makefile \
	  shared/library/sharedCollision/src/shared/Makefile \
	  shared/library/sharedCollision/src/shared/core/Makefile \
	  shared/library/sharedCollision/src/shared/extent/Makefile \
	  shared/library/sharedCompression/Makefile \
	  shared/library/sharedCompression/src/Makefile \
	  shared/library/sharedCompression/src/shared/Makefile \
	  shared/library/sharedCommandParser/Makefile \
	  shared/library/sharedCommandParser/src/Makefile \
	  shared/library/sharedCommandParser/src/shared/Makefile \
	  shared/library/sharedDatabaseInterface/Makefile \
	  shared/library/sharedDatabaseInterface/src/Makefile \
	  shared/library/sharedDatabaseInterface/src/shared/Makefile \
	  shared/library/sharedDatabaseInterface/src/shared/core/Makefile \
	  shared/library/sharedDatabaseInterface/src/shared/logger/Makefile \
	  shared/library/sharedDatabaseInterface/src/shared/queue/Makefile \
	  shared/library/sharedDatabaseInterface/src_oci/Makefile \
	  shared/library/sharedDebug/Makefile \
	  shared/library/sharedDebug/src/Makefile \
	  shared/library/sharedDebug/src/shared/Makefile \
	  shared/library/sharedDebug/src/linux/Makefile \
	  shared/library/sharedFile/Makefile \
	  shared/library/sharedFile/src/Makefile \
	  shared/library/sharedFile/src/shared/Makefile \
	  shared/library/sharedFile/src/linux/Makefile \
	  shared/library/sharedFoundation/Makefile \
	  shared/library/sharedFoundation/src/Makefile \
	  shared/library/sharedFoundation/src/linux/Makefile \
	  shared/library/sharedFoundation/src/shared/Makefile \
	  shared/library/sharedFoundation/src/shared/dynamicVariable/Makefile \
	  shared/library/sharedFractal/Makefile \
	  shared/library/sharedFractal/src/Makefile \
	  shared/library/sharedFractal/src/shared/Makefile \
	  shared/library/sharedGame/Makefile \
	  shared/library/sharedGame/src/Makefile \
	  shared/library/sharedGame/src/shared/Makefile \
	  shared/library/sharedGame/src/shared/appearance/Makefile \
	  shared/library/sharedGame/src/shared/collision/Makefile \
	  shared/library/sharedGame/src/shared/combat/Makefile \
	  shared/library/sharedGame/src/shared/command/Makefile \
	  shared/library/sharedGame/src/shared/core/Makefile \
	  shared/library/sharedGame/src/shared/dynamics/Makefile \
	  shared/library/sharedGame/src/shared/mount/Makefile \
	  shared/library/sharedGame/src/shared/object/Makefile \
	  shared/library/sharedGame/src/shared/objectTemplate/Makefile \
	  shared/library/sharedGame/src/shared/quest/Makefile \
	  shared/library/sharedGame/src/shared/space/Makefile \
	  shared/library/sharedGame/src/shared/sui/Makefile \
	  shared/library/sharedGame/src/shared/travel/Makefile \
	  shared/library/sharedImage/Makefile \
	  shared/library/sharedImage/src/Makefile \
	  shared/library/sharedImage/src/shared/Makefile \
	  shared/library/sharedInputMap/Makefile \
	  shared/library/sharedInputMap/src/Makefile \
	  shared/library/sharedInputMap/src/shared/Makefile \
	  shared/library/sharedIoWin/Makefile \
	  shared/library/sharedIoWin/src/Makefile \
	  shared/library/sharedIoWin/src/shared/Makefile \
	  shared/library/sharedLog/Makefile \
	  shared/library/sharedLog/src/Makefile \
	  shared/library/sharedLog/src/shared/Makefile \
	  shared/library/sharedLog/src/linux/Makefile \
	  shared/library/sharedMath/Makefile \
	  shared/library/sharedMath/src/Makefile \
	  shared/library/sharedMath/src/shared/Makefile \
	  shared/library/sharedMath/src/shared/core/Makefile \
	  shared/library/sharedMath/src/shared/debug/Makefile \
	  shared/library/sharedMemoryManager/Makefile \
	  shared/library/sharedMemoryManager/src/Makefile \
	  shared/library/sharedMemoryManager/src/linux/Makefile \
	  shared/library/sharedMemoryManager/src/shared/Makefile \
	  shared/library/sharedMessageDispatch/Makefile \
	  shared/library/sharedMessageDispatch/src/Makefile \
	  shared/library/sharedMessageDispatch/src/shared/Makefile \
	  shared/library/sharedNetwork/Makefile \
	  shared/library/sharedNetwork/src/Makefile \
	  shared/library/sharedNetwork/src/linux/Makefile \
	  shared/library/sharedNetwork/src/shared/Makefile \
	  shared/library/sharedNetwork/src/shared/UdpLibraryMT/Makefile \
	  shared/library/sharedNetworkMessages/Makefile \
	  shared/library/sharedNetworkMessages/src/Makefile \
	  shared/library/sharedNetworkMessages/src/shared/Makefile \
	  shared/library/sharedNetworkMessages/src/shared/chat/Makefile \
	  shared/library/sharedNetworkMessages/src/shared/clientGameServer/Makefile \
	  shared/library/sharedNetworkMessages/src/shared/clientLoginServer/Makefile \
	  shared/library/sharedNetworkMessages/src/shared/common/Makefile \
	  shared/library/sharedNetworkMessages/src/shared/core/Makefile \
	  shared/library/sharedNetworkMessages/src/shared/customerService/Makefile \
	  shared/library/sharedNetworkMessages/src/shared/planetWatch/Makefile \
	  shared/library/sharedNetworkMessages/src/shared/voicechat/Makefile \
	  shared/library/sharedObject/Makefile \
	  shared/library/sharedObject/src/Makefile \
	  shared/library/sharedObject/src/shared/Makefile \
	  shared/library/sharedObject/src/shared/appearance/Makefile \
	  shared/library/sharedObject/src/shared/container/Makefile \
	  shared/library/sharedObject/src/shared/controller/Makefile \
	  shared/library/sharedObject/src/shared/core/Makefile \
	  shared/library/sharedObject/src/shared/customization/Makefile \
	  shared/library/sharedObject/src/shared/dynamics/Makefile \
	  shared/library/sharedObject/src/shared/lot/Makefile \
	  shared/library/sharedObject/src/shared/movement/Makefile \
	  shared/library/sharedObject/src/shared/object/Makefile \
	  shared/library/sharedObject/src/shared/portal/Makefile \
	  shared/library/sharedObject/src/shared/property/Makefile \
	  shared/library/sharedObject/src/shared/world/Makefile \
	  shared/library/sharedPathfinding/Makefile \
	  shared/library/sharedPathfinding/src/Makefile \
	  shared/library/sharedPathfinding/src/shared/Makefile \
	  shared/library/sharedRandom/Makefile \
	  shared/library/sharedRandom/src/Makefile \
	  shared/library/sharedRandom/src/shared/Makefile \
	  shared/library/sharedRegex/Makefile \
	  shared/library/sharedRegex/src/Makefile \
	  shared/library/sharedRegex/src/linux/Makefile \
	  shared/library/sharedRegex/src/shared/Makefile \
	  shared/library/sharedRemoteDebugServer/Makefile \
	  shared/library/sharedRemoteDebugServer/src/Makefile \
	  shared/library/sharedRemoteDebugServer/src/shared/Makefile \
	  shared/library/sharedSkillSystem/Makefile \
	  shared/library/sharedSkillSystem/src/Makefile \
	  shared/library/sharedSkillSystem/src/shared/Makefile \
	  shared/library/sharedSwitcher/Makefile \
	  shared/library/sharedSwitcher/src/Makefile \
	  shared/library/sharedSwitcher/src/shared/Makefile \
	  shared/library/sharedSynchronization/Makefile \
	  shared/library/sharedSynchronization/src/Makefile \
	  shared/library/sharedSynchronization/src/linux/Makefile \
	  shared/library/sharedSynchronization/src/shared/Makefile \
	  shared/library/sharedTemplate/Makefile \
	  shared/library/sharedTemplate/src/Makefile \
	  shared/library/sharedTemplate/src/shared/Makefile \
	  shared/library/sharedTemplate/src/shared/core/Makefile \
	  shared/library/sharedTemplate/src/shared/template/Makefile \
	  shared/library/sharedTemplateDefinition/Makefile \
	  shared/library/sharedTemplateDefinition/src/Makefile \
	  shared/library/sharedTemplateDefinition/src/shared/Makefile \
	  shared/library/sharedTemplateDefinition/src/shared/core/Makefile \
	  shared/library/sharedTerrain/Makefile \
	  shared/library/sharedTerrain/src/Makefile \
	  shared/library/sharedTerrain/src/shared/Makefile \
	  shared/library/sharedTerrain/src/shared/appearance/Makefile \
	  shared/library/sharedTerrain/src/shared/core/Makefile \
	  shared/library/sharedTerrain/src/shared/flora/Makefile \
	  shared/library/sharedTerrain/src/shared/generator/Makefile \
	  shared/library/sharedTerrain/src/shared/object/Makefile \
	  shared/library/sharedThread/Makefile \
	  shared/library/sharedThread/src/Makefile \
	  shared/library/sharedThread/src/linux/Makefile \
	  shared/library/sharedThread/src/shared/Makefile \
	  shared/library/sharedUtility/Makefile \
	  shared/library/sharedUtility/src/Makefile \
	  shared/library/sharedUtility/src/shared/Makefile \
	  shared/library/sharedXml/Makefile \
	  shared/library/sharedXml/src/Makefile \
	  shared/library/sharedXml/src/shared/Makefile \
	  shared/library/sharedXml/src/shared/core/Makefile \
	  shared/library/sharedXml/src/shared/tree/Makefile \
	  shared/application/Makefile \
	  shared/application/ArmorExporterTool/Makefile \
	  shared/application/ArmorExporterTool/src/Makefile \
	  shared/application/ArmorExporterTool/src/shared/Makefile \
	  shared/application/ArmorExporterTool/src/linux/Makefile \
	  shared/application/DataTableTool/Makefile \
	  shared/application/DataTableTool/src/Makefile \
	  shared/application/DataTableTool/src/shared/Makefile \
	  shared/application/DataTableTool/src/linux/Makefile \
	  shared/application/TemplateCompiler/Makefile \
	  shared/application/TemplateCompiler/src/Makefile \
	  shared/application/TemplateCompiler/src/shared/Makefile \
	  shared/application/TemplateCompiler/src/linux/Makefile \
	  shared/application/TemplateDefinitionCompiler/Makefile \
	  shared/application/TemplateDefinitionCompiler/src/Makefile \
	  shared/application/TemplateDefinitionCompiler/src/shared/Makefile \
	  shared/application/TemplateDefinitionCompiler/src/shared/core/Makefile \
	  shared/application/TemplateDefinitionCompiler/src/linux/Makefile \
	  shared/application/WeaponExporterTool/Makefile \
	  shared/application/WeaponExporterTool/src/Makefile \
	  shared/application/WeaponExporterTool/src/shared/Makefile \
	  shared/application/WeaponExporterTool/src/linux/Makefile \
	  shared/application/CoreWeaponExporterTool/Makefile \
	  shared/application/CoreWeaponExporterTool/src/Makefile \
	  shared/application/CoreWeaponExporterTool/src/shared/Makefile \
	  shared/application/CoreWeaponExporterTool/src/linux/Makefile \
	  server/Makefile \
	  server/library/Makefile \
	  server/library/serverBase/Makefile \
	  server/library/serverBase/src/Makefile \
          server/library/serverBase/src/shared/Makefile \
          server/library/serverBase/src/shared/core/Makefile \
	  server/library/serverDatabase/Makefile \
	  server/library/serverDatabase/src/Makefile \
	  server/library/serverDatabase/src/shared/Makefile \
	  server/library/serverGame/Makefile \
	  server/library/serverGame/src/Makefile \
	  server/library/serverGame/src/shared/Makefile \
	  server/library/serverGame/src/shared/ai/Makefile \
	  server/library/serverGame/src/shared/behavior/Makefile \
	  server/library/serverGame/src/shared/city/Makefile \
	  server/library/serverGame/src/shared/collision/Makefile \
	  server/library/serverGame/src/shared/command/Makefile \
	  server/library/serverGame/src/shared/commoditiesMarket/Makefile \
	  server/library/serverGame/src/shared/console/Makefile \
	  server/library/serverGame/src/shared/container/Makefile \
	  server/library/serverGame/src/shared/controller/Makefile \
	  server/library/serverGame/src/shared/core/Makefile \
	  server/library/serverGame/src/shared/generated/Makefile \
	  server/library/serverGame/src/shared/guild/Makefile \
	  server/library/serverGame/src/shared/metrics/Makefile \
	  server/library/serverGame/src/shared/network/Makefile \
	  server/library/serverGame/src/shared/object/Makefile \
	  server/library/serverGame/src/shared/objectTemplate/Makefile \
	  server/library/serverGame/src/shared/pvp/Makefile \
	  server/library/serverGame/src/shared/region/Makefile \
	  server/library/serverGame/src/shared/region3d/Makefile \
	  server/library/serverGame/src/shared/resource/Makefile \
	  server/library/serverGame/src/shared/space/Makefile \
	  server/library/serverGame/src/shared/stationplayers/Makefile \
	  server/library/serverGame/src/shared/synchronizedUi/Makefile \
	  server/library/serverGame/src/shared/trading/Makefile \
	  server/library/serverKeyShare/Makefile \
	  server/library/serverKeyShare/src/Makefile \
	  server/library/serverKeyShare/src/shared/Makefile \
	  server/library/serverMetrics/Makefile \
	  server/library/serverMetrics/src/Makefile \
	  server/library/serverMetrics/src/shared/Makefile \
	  server/library/serverUtility/Makefile \
	  server/library/serverUtility/src/Makefile \
	  server/library/serverUtility/src/linux/Makefile \
	  server/library/serverUtility/src/shared/Makefile \
	  server/library/serverNetworkMessages/Makefile \
	  server/library/serverNetworkMessages/src/Makefile \
	  server/library/serverNetworkMessages/src/shared/Makefile \
	  server/library/serverNetworkMessages/src/shared/centralConnectionServer/Makefile \
	  server/library/serverNetworkMessages/src/shared/centralGameServer/Makefile \
	  server/library/serverNetworkMessages/src/shared/centralPlanetServer/Makefile \
	  server/library/serverNetworkMessages/src/shared/centralTaskManager/Makefile \
	  server/library/serverNetworkMessages/src/shared/commoditiesSwgDatabase/Makefile \
	  server/library/serverNetworkMessages/src/shared/core/Makefile \
	  server/library/serverNetworkMessages/src/shared/gameCommoditiesServer/Makefile \
	  server/library/serverNetworkMessages/src/shared/gameConnectionServer/Makefile \
	  server/library/serverNetworkMessages/src/shared/gameGameServer/Makefile \
	  server/library/serverNetworkMessages/src/shared/gamePlanetServer/Makefile \
	  server/library/serverNetworkMessages/src/shared/gameStationPlayersCollector/Makefile \
	  server/library/serverNetworkMessages/src/shared/gameTaskManager/Makefile \
	  server/library/serverNetworkMessages/src/shared/loginCentralServer/Makefile \
	  server/library/serverNetworkMessages/src/shared/metricsMessages/Makefile \
	  server/library/serverNetworkMessages/src/shared/transferServer/Makefile \
	  server/library/serverPathfinding/Makefile \
	  server/library/serverPathfinding/src/Makefile \
	  server/library/serverPathfinding/src/shared/Makefile \
	  server/library/serverScript/Makefile \
	  server/library/serverScript/src/Makefile \
	  server/library/serverScript/src/shared/Makefile \
	  server/application/Makefile \
	  server/application/CentralServer/Makefile \
	  server/application/CentralServer/src/Makefile \
	  server/application/CentralServer/src/linux/Makefile \
	  server/application/CentralServer/src/shared/Makefile \
	  server/application/CentralServer/src/shared/AuctionTransferGameAPI/Makefile \
	  server/application/CentralServer/src/shared/AuctionTransferGameAPI/zip/Makefile \
	  server/application/CentralServer/src/shared/AuctionTransferGameAPI/zip/Zip/Makefile \
	  server/application/CentralServer/src/shared/AuctionTransferGameAPI/Base/Makefile \
	  server/application/CentralServer/src/shared/AuctionTransferGameAPI/Base/linux/Makefile \
	  server/application/CentralServer/src/shared/AuctionTransferGameAPI/TcpLibrary/Makefile \
	  server/application/CentralServer/src/shared/AuctionTransferGameAPI/ATGenericAPI/Makefile \
	  server/application/ChatServer/Makefile \
	  server/application/ChatServer/src/Makefile \
	  server/application/ChatServer/src/linux/Makefile \
	  server/application/ChatServer/src/shared/Makefile \
	  server/application/CommoditiesServer/Makefile \
	  server/application/CommoditiesServer/src/Makefile \
	  server/application/CommoditiesServer/src/linux/Makefile \
	  server/application/CommoditiesServer/src/shared/Makefile \
	  server/application/ConnectionServer/Makefile \
	  server/application/ConnectionServer/src/Makefile \
	  server/application/ConnectionServer/src/linux/Makefile \
	  server/application/ConnectionServer/src/shared/Makefile \
	  server/application/CustomerServiceServer/Makefile \
	  server/application/CustomerServiceServer/src/Makefile \
	  server/application/CustomerServiceServer/src/linux/Makefile \
	  server/application/CustomerServiceServer/src/shared/Makefile \
	  server/application/LoginPing/Makefile \
	  server/application/LoginPing/src/Makefile \
	  server/application/LoginPing/src/linux/Makefile \
	  server/application/LoginPing/src/shared/Makefile \
	  server/application/LoginServer/Makefile \
	  server/application/LoginServer/src/Makefile \
	  server/application/LoginServer/src/linux/Makefile \
	  server/application/LoginServer/src/shared/Makefile \
	  server/application/LogServer/Makefile \
	  server/application/LogServer/src/Makefile \
	  server/application/LogServer/src/linux/Makefile \
	  server/application/LogServer/src/shared/Makefile \
	  server/application/MetricsServer/Makefile \
	  server/application/MetricsServer/src/Makefile \
	  server/application/MetricsServer/src/linux/Makefile \
	  server/application/MetricsServer/src/shared/Makefile \
	  server/application/PlanetServer/Makefile \
	  server/application/PlanetServer/src/Makefile \
	  server/application/PlanetServer/src/linux/Makefile \
	  server/application/PlanetServer/src/shared/Makefile \
	  server/application/ServerConsole/Makefile \
	  server/application/ServerConsole/src/Makefile \
	  server/application/ServerConsole/src/linux/Makefile \
	  server/application/ServerConsole/src/shared/Makefile \
	  server/application/StationPlayersCollector/Makefile \
	  server/application/StationPlayersCollector/src/Makefile \
	  server/application/StationPlayersCollector/src/linux/Makefile \
	  server/application/StationPlayersCollector/src/shared/Makefile \
	  server/application/TaskManager/Makefile \
	  server/application/TaskManager/src/Makefile \
	  server/application/TaskManager/src/linux/Makefile \
	  server/application/TaskManager/src/shared/Makefile \
	  server/application/TransferServer/Makefile \
	  server/application/TransferServer/src/Makefile \
	  server/application/TransferServer/src/linux/Makefile \
	  server/application/TransferServer/src/shared/Makefile)

