AC_PREREQ(2.53)
AC_INIT(game, 1.0.0, swoprogrammers@soe.sony.com)
AC_CONFIG_AUX_DIR(config)
# AM_CONFIG_HEADER(config.h)
AC_CANONICAL_BUILD
AC_CANONICAL_HOST
AC_CANONICAL_TARGET

AC_ARG_ENABLE([debug], AC_HELP_STRING([--enable-debug\[=yes\|no\] ], [defines _DEBUG and enables debugging features]), AC_DEFINE(_DEBUG) CXXFLAGS="$CXXFLAGS -g", CXXFLAGS="$CXXFLAGS -O2")

# todo -  when using gcc-3, pick more optimizations for use
AC_ARG_ENABLE([optimized], AC_HELP_STRING([--enable-optimized\[=yes\|no\] ], [enables optimizations]), CXXFLAGS="$CXXFLAGS -O2", [])

case $target in
*-linux-*)
        platform=[linux];
	CXXFLAGS="$CXXFLAGS -DLINUX";
	AC_DEFINE(LINUX)
	AC_DEFINE(_REENTRANT)
	AC_DEFINE(_XOPEN_SOURCE, 500)
	AC_DEFINE(_GNU_SOURCE)
	AC_DEFINE(linux)
	AC_DEFINE(_GNU_SOURCE)
	AC_DEFINE(_USING_STL)
	AC_DEFINE(__STL_NO_BAD_ALLOC)
esac
AC_SUBST(platform)
#AC_DISABLE_SHARED

AM_INIT_AUTOMAKE

AC_PROG_LIBTOOL
AC_PROG_CXX
AC_PROG_CC

AC_DEFUN([REQUIRE_PACKAGE], [if ! test $$3; then AC_ARG_WITH([$1], AC_HELP_STRING([--with-$1=path/to/$1], [where to find $1]), AC_SUBST($3, $withval), AC_SUBST($3, $2)) AC_CHECK_FILE($4, [], AC_MSG_ERROR([$1 is required but was not found in $$3])) fi])

REQUIRE_PACKAGE(engine, [`pwd`/../engine], engine_dir, [$engine_dir/shared/library/sharedFoundation/include/public/sharedFoundation/FirstSharedFoundation.h]) AC_SUBST(engine_dir)
REQUIRE_PACKAGE(stlport, [`pwd`/../external/3rd/library/stlport453], stlport_dir, [$stlport_dir/stlport/algorithm]) AC_SUBST(stlport_dir)
REQUIRE_PACKAGE(archive, [`pwd`/../external/ours/library/archive], archive_dir, [$archive_dir/include/Archive/Archive.h]) AC_SUBST(archive_dir)
REQUIRE_PACKAGE(localization, [`pwd`/../external/ours/library/localization], localization_dir, [$localization_dir/include/FirstLocalization.h]) AC_SUBST(localization_dir)
REQUIRE_PACKAGE(crypto, [`pwd`/../external/ours/library/crypto], crypto_dir, [$crypto_dir/include/FirstCrypto.h]) AC_SUBST(crypto_dir)
REQUIRE_PACKAGE(localizationArchive, [`pwd`/../external/ours/library/localizationArchive], localizationArchive_dir, [$localizationArchive_dir/include/public/localizationArchive/FirstLocalizationArchive.h]) AC_SUBST(localizationArchive_dir)
REQUIRE_PACKAGE(fileInterface, [`pwd`/../external/ours/library/fileInterface], fileInterface_dir, [$fileInterface_dir/include/public/fileInterface/FirstFileInterface.h]) AC_SUBST(fileInterface_dir)
REQUIRE_PACKAGE(unicode, [`pwd`/../external/ours/library/unicode], unicode_dir, [$unicode_dir/include/Unicode.h]) AC_SUBST(unicode_dir)
REQUIRE_PACKAGE(unicodeArchive, [`pwd`/../external/ours/library/unicodeArchive], unicodeArchive_dir, [$unicodeArchive_dir/include/public/unicodeArchive/FirstUnicodeArchive.h]) AC_SUBST(unicodeArchive_dir)
REQUIRE_PACKAGE(udplibrary, [`pwd`/../external/3rd/library/udplibrary], udplibrary_dir, [$udplibrary_dir/UdpLibrary.hpp]) AC_SUBST(udplibrary_dir)
REQUIRE_PACKAGE(oracle, [`pwd`/../external/3rd/library/oracle], oracle_dir, [$oracle_dir/include/oci.h]) AC_SUBST(oracle_dir)
REQUIRE_PACKAGE(libxml, [`pwd`/../external/3rd/library/libxml], libxml_dir, [$libxml_dir/libxml.h]) AC_SUBST(libxml_dir)
AC_MSG_WARN([engine has a forward dependency on game])
REQUIRE_PACKAGE(game, [`pwd`], game_dir, [$game_dir/shared/library/swgSharedUtility/include/public/swgSharedUtility/FirstSwgSharedUtility.h]) AC_SUBST(game_dir)
REQUIRE_PACKAGE(singleton, [`pwd`/../external/ours/library/singleton], singleton_dir, [$singleton_dir/include/Singleton/Singleton.h]) AC_SUBST(singleton_dir)
REQUIRE_PACKAGE(boost, [`pwd`/../external/3rd/library/boost], boost_dir, [$boost_dir/boost/smart_ptr.hpp]) AC_SUBST(boost_dir)
REQUIRE_PACKAGE(pcre, [`pwd`/../external/3rd/library/pcre/4.1/$platform], pcre_dir, [$pcre_dir/include/pcre/pcre.h]) AC_SUBST(pcre_dir)
REQUIRE_PACKAGE(perforce, [`pwd`/../external/3rd/library/perforce], perforce_dir, [$perforce_dir/include/clientapi.h]) AC_SUBST(perforce_dir)
REQUIRE_PACKAGE(soePlatform, [`pwd`/../external/3rd/library/soePlatform], soePlatform_dir, [$soePlatform_dir/Base/Base.h]) AC_SUBST(soePlatform_dir)
REQUIRE_PACKAGE(platform, [`pwd`/../external/3rd/library/platform], platform_dir, [$platform_dir/MonAPI2/MonitorAPI.h]) AC_SUBST(platform_dir)

AC_DEFUN([GAME_AUTOMAKE], [AC_MSG_NOTICE([creating $1.in]) ; automake $1])

GAME_AUTOMAKE(server/application/SwgDatabaseServer/src/linux/Makefile)
GAME_AUTOMAKE(server/application/SwgGameServer/src/linux/Makefile)

AC_OUTPUT(Makefile \
	  shared/Makefile \
	  shared/application/Makefile \
	  shared/application/SwgLoadClient/Makefile \
	  shared/application/SwgLoadClient/src/Makefile \
	  shared/application/SwgLoadClient/src/shared/Makefile \
	  shared/library/Makefile \
	  shared/library/swgSharedNetworkMessages/Makefile \
	  shared/library/swgSharedNetworkMessages/src/Makefile \
	  shared/library/swgSharedNetworkMessages/src/shared/Makefile \
	  shared/library/swgSharedNetworkMessages/src/shared/combat/Makefile \
	  shared/library/swgSharedNetworkMessages/src/shared/consent/Makefile \
	  shared/library/swgSharedNetworkMessages/src/shared/core/Makefile \
	  shared/library/swgSharedNetworkMessages/src/shared/permissionList/Makefile \
	  shared/library/swgSharedNetworkMessages/src/shared/survey/Makefile \
	  shared/library/swgSharedUtility/Makefile \
	  shared/library/swgSharedUtility/src/Makefile \
	  shared/library/swgSharedUtility/src/shared/Makefile \
	  server/Makefile \
	  server/library/Makefile \
	  server/library/swgServerNetworkMessages/Makefile \
	  server/library/swgServerNetworkMessages/src/Makefile \
	  server/library/swgServerNetworkMessages/src/shared/Makefile \
	  server/library/swgServerNetworkMessages/src/shared/combat/Makefile \
	  server/library/swgServerNetworkMessages/src/shared/core/Makefile \
	  server/library/swgServerNetworkMessages/src/shared/jedi/Makefile \
	  server/library/swgServerNetworkMessages/src/shared/money/Makefile \
	  server/library/swgServerNetworkMessages/src/shared/resource/Makefile \
	  server/library/swgServerNetworkMessages/src/shared/travel/Makefile \
	  server/application/Makefile \
	  server/application/SwgBattlefieldTool/Makefile \
	  server/application/SwgBattlefieldTool/src/Makefile \
	  server/application/SwgBattlefieldTool/src/shared/Makefile \
	  server/application/SwgDatabaseServer/Makefile \
	  server/application/SwgDatabaseServer/src/Makefile \
	  server/application/SwgDatabaseServer/src/linux/Makefile \
	  server/application/SwgDatabaseServer/src/shared/Makefile \
	  server/application/SwgDatabaseServer/src/shared/buffers/Makefile \
	  server/application/SwgDatabaseServer/src/shared/cleanup/Makefile \
	  server/application/SwgDatabaseServer/src/shared/core/Makefile \
	  server/application/SwgDatabaseServer/src/shared/generated/Makefile \
	  server/application/SwgDatabaseServer/src/shared/persistable/Makefile \
	  server/application/SwgDatabaseServer/src/shared/queries/Makefile \
	  server/application/SwgDatabaseServer/src/shared/tasks/Makefile \
	  server/application/SwgGameServer/Makefile \
	  server/application/SwgGameServer/src/Makefile \
	  server/application/SwgGameServer/src/linux/Makefile \
	  server/application/SwgGameServer/src/shared/Makefile \
	  server/application/SwgGameServer/src/shared/combat/Makefile \
	  server/application/SwgGameServer/src/shared/console/Makefile \
	  server/application/SwgGameServer/src/shared/controller/Makefile \
	  server/application/SwgGameServer/src/shared/core/Makefile \
	  server/application/SwgGameServer/src/shared/lint/Makefile \
	  server/application/SwgGameServer/src/shared/object/Makefile \
	  server/application/SwgGameServer/src/shared/objectTemplate/Makefile \
	  server/application/SwgGameServer/src/shared/snapshot/Makefile)
