AUTOMAKE_OPTIONS=foreign
SUBDIRS=CentralServer \
	ChatServer \
	CommoditiesServer \
	ConnectionServer \
	CustomerServiceServer \
	LoginPing \
	LoginServer \
	LogServer \
	MetricsServer \
	PlanetServer \
	ServerConsole \
	StationPlayersCollector \
	TaskManager \
	TransferServer
	
	
include $(engine_dir)/../make_include/engine.include
